--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1974,3 +1974,28 @@ body.theme-transitioning,
 body.theme-transitioning * {
     transition: background-color 0.5s ease, color 0.5s ease, border-color 0.5s ease, box-shadow 0.5s ease !important;
 }
+
+
+
+/* Popup para mensagem de retorno do formulario */
+.popup {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    width: 300px;
+    color: #fff;
+    border-radius: 4px;
+    display: none;
+    opacity: 0;
+    transition: opacity 0.5s;
+    z-index: 999;
+}
+.popup p { padding: 13px 15px 15px; line-height: 18px; font-size: 1rem; }
+.popup .progress-bar { height: 10px; background: #1c7a32 !important; width: 0%; transition: width linear; }
+.popup .close-btn { background: transparent; border: none; color: #fff; font-size: 18px; cursor: pointer; position: absolute; top: 5px; right: 10px; }
+
+.popup-success { background: #28a745!important; }
+.popup-success .progress-bar { background: #1c7a32 !important; }
+
+.popup-error { background: #dc3545!important; }
+.popup-error .progress-bar { background: #9e2430 !important; }
